# Course_work_OOP

./: README.md  main.py  pyproject.toml  vacancies_hh.json  vacancies_sj.json
classes/: abstract_api.py  data_to_json.py  hh_cls.py  sj_cls.py  vacancies_cls.py
