[tool.poetry]
name = "course-work-oop"
version = "0.1.0"
description = ""
authors = ["EroshVK <635753051vika@gmai.com>"]
readme = "README.md"
packages = [{include = "course_work_oop"}]

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
